# Smart_Contract_Auditor

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  openenv.yaml  parser.py  pyproject.toml  requirements.txt
agent/: baseline_agent.py
api/: server.py
auditor/: benchmark.py  environment.py  grader.py  models.py  reward.py
env/: grader.py  models.py  reward.py
server/: __init__.py  app.py
tasks/easy/: BECToken.json  FindThisHash.json  arbitrary_location_write_simple.json  auction.json  crypto_roulette.json  dos_address.json  dos_number.json  dos_simple.json  ether_lotto.json  etherbank.json  etherstore.json  governmental_survey.json  guess_the_random_number.json  incorrect_constructor_name1.json  incorrect_constructor_name2.json  incorrect_constructor_name3.json  insecure_transfer.json  integer_overflow_1.json  integer_overflow_add.json  integer_overflow_benign_1.json  integer_overflow_mapping_sym_1.json  integer_overflow_minimal.json  integer_overflow_mul.json  integer_overflow_multitx_multifunc_feasible.json  integer_overflow_multitx_onefunc_feasible.json  mapping_write.json  mishandled.json  modifier_reentrancy.json  multiowned_vulnerable.json  mycontract.json  name_registrar.json  old_blockhash.json  open_address_lottery.json  overflow_simple_add.json  phishable.json  proxy.json  reentrance.json  reentrancy_bonus.json  reentrancy_cross_function.json  reentrancy_dao.json  (+14 more)
tasks/hard/: blackjack.json  etheraffle.json  king_of_the_ether_throne.json  overflow_single_tx.json  random_number_generator.json  smart_billions.json  (+1 more)
(+15 files in other folders)
